--- a/feeds.props
+++ b/feeds.props
@@ -1,5 +1,5 @@
-USERS_REST_SERVER_MAINCLASS=
-USERS_REST_PORT=
+USERS_REST_SERVER_MAINCLASS=sd2223.trab1.server.RESTUsersServer
+USERS_REST_PORT=3456
 USERS_SOAP_SERVER_MAINCLASS=
 USERS_SOAP_PORT=
 USERS_EXTRA_ARGS=ourorg-0
