--- a/feeds.props
+++ b/feeds.props
@@ -1,12 +1,12 @@
-USERS_REST_SERVER_MAINCLASS=sd2223.trab1.server.RESTUsersServer
-USERS_REST_PORT=3456
-USERS_SOAP_SERVER_MAINCLASS=
-USERS_SOAP_PORT=
-USERS_EXTRA_ARGS=ourorg-0
-FEEDS_REST_SERVER_MAINCLASS=
-FEEDS_REST_PORT=
-FEEDS_SOAP_SERVER_MAINCLASS=
-FEEDS_SOAP_PORT=
-FEEDS_EXTRA_ARGS=ourorg-0
+USERS_REST_SERVER_MAINCLASS=sd2223.trab1.server.rest.RestUsersServer
+USERS_REST_PORT=8080
+USERS_SOAP_SERVER_MAINCLASS=sd2223.trab1.server.soap.SoapUsersServer
+USERS_SOAP_PORT=8081
+USERS_EXTRA_ARGS=
+FEEDS_REST_SERVER_MAINCLASS=sd2223.trab1.server.rest.RestFeedsServer
+FEEDS_REST_PORT=8080
+FEEDS_SOAP_SERVER_MAINCLASS=sd2223.trab1.server.soap.SoapFeedsServer
+FEEDS_SOAP_PORT=8081
+FEEDS_EXTRA_ARGS=
 DISCOVERY_MULTICAST_IP=226.226.226.226
-DISCOVERY_MULTICAST_PORT=2266
+DISCOVERY_MULTICAST_PORT=2266 
